blog on its way - posts listing and work with id passed in

--- a/templates/post_form.html
+++ b/templates/post_form.html
@@ -113,7 +113,7 @@ input[type=submit] {
             </label>
             <label>
                 <div>Content</div>
-                <textarea name="art">{{content}}</textarea>
+                <textarea name="content">{{content}}</textarea>
             </label>
             <div class="error">{{error}}</div>
             <input type="submit">
