--- a/templates/blog.html
+++ b/templates/blog.html
@@ -105,13 +105,23 @@ input[type=submit] {
         </style>
     </head>
     <body>
-        <h1>Blog</h1>
+        <h1><a href="/blog">CS 253 Blog</a></h1>
         <hr>
+        {% if not posts %}
+            <div class="post">
+                {% if not post.content %}
+                    <div>Looks like there's no post listed.</div>
+                {% endif %}
+                <div class="post-title">{{post.subject}}</div>
+                <div class="post-content">{{post.content}}</div>
+            </div>
+        {% endif %}
         {% for post in posts %}
-            <div class="art">
-                <div class="art-title">{{post.subject}}</div>
-                <pre class="art-body">{{post.content}}</pre>
+            <div class="post">
+                <div class="post-title">{{post.subject}}</div>
+                <div class="post-content">{{post.content}}</div>
             </div>
         {% endfor %}
+        <div><a href="/blog/newpost">Write New Post</a></div>
     </body>
 </html>
