--- a/templates/front.html
+++ b/templates/front.html
@@ -110,6 +110,7 @@ input[type=submit] {
             <ul>
                 <li><a href="/blog">Blog</a></li>
                 <li><a href="/blog/newpost">New Post</a></li>
+                <li><a href="/rot13">Rot13 Encrypt Form</a></li>
                 <li><a href="/signup">Signup</a></li>
             </ul>
         </div>
