--- a/templates/rot13_form.html
+++ b/templates/rot13_form.html
@@ -1,18 +1,10 @@
-<!DOCTYPE html>
+{% extends "base.html" %}
 
-<html>
-<head>
-    <title>Rot 13 Page</title>
-</head>
-
-<body>
-
+{% block content %}
 <form method="post">
     Enter some text to ROT13:
     <br>
     <textarea name="text">{{rot13}}</textarea>
     <input type="submit">
 </form>
-
-</body>
-</html>
+{% endblock %}
